Project pages created

--- a/HTML5/HTML5/11. Project Files/01. Starter Files/courses.html
+++ b/HTML5/HTML5/11. Project Files/01. Starter Files/courses.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <!-- Start Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/courses.css">
 
     <!-- Start Global CSS -->
     <link rel="stylesheet" type="text/css" href="css/global.css">
@@ -31,8 +31,32 @@
 
     </header>
 
+    <center><h1>Our Courses </h1></center>
 
+    <div class="course">
+      <img src="img/course-01.jpg" alt="Course 1 Img">
+      <center><h2>HTML5 For Beginners</h2></center>
+      <center><h6>This course was designed for students starting out in Front End Web Development wanting to learn HTML5 to get started........</h6></center>
+      <center><button type="button" name="button">Learn More</button></center>
+    </div>
 
+    <div class="course2">
+      <img src="img/course-02.jpg" alt="Course 2 Img">
+      <center><h2>CSS3 For Beginners</h2></center>
+      <center><h6>This course was designed for students starting out in Front End Web Development wanting to learn CSS3 to get started........</h6></center>
+      <center><button type="button" name="button">Learn More</button></center>
+    </div>
+    <div class="course3">
+      <img src="img/course-03.jpg" alt="Course 3 Img">
+      <center><h2>JavaScript For Beginners</h2></center>
+      <center><h6>This course was designed for students starting out in Front End Web Development wanting to learn JavaScript to get started........</h6></center>
+      <center><button type="button" name="button">Learn More</button></center>
+    </div>
+
+    <footer>
+      <img id="logo" src="img/logo.png" alt="LearnTeach+ Logo">
+      <p id="footer">© Copyright 2022. All Rights Reserved. | LearnTech Plus</p>
+    </footer>
 
   </body>
 </html>
