--- a/HTML5/HTML5/11. Project Files/01. Starter Files/learntech.html
+++ b/HTML5/HTML5/11. Project Files/01. Starter Files/learntech.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <!-- Start Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/learntech.css">
 
     <!-- Start Global CSS -->
     <link rel="stylesheet" type="text/css" href="css/global.css">
@@ -31,8 +31,37 @@
 
     </header>
 
+    <section id="learntech">
 
+      <center><h1 class="h1lt">Learn Tech</h1></center>
 
+      <div class="learntechnow">
+        <img src="img/learntechnow.jpg" alt="Learn Tech Now Img">
+        <center><h2>Learn Tech Now</h2></center>
+        <center><h6>Daily Video Series Covering Tech Topics</h6></center>
+        <center><button type="button" name="button">Watch Now</button></center>
+      </div>
+
+      <div class="learntechpodcast">
+        <img src="img/learntechpodcast.jpg" alt="Learn Tech Podcast Img">
+        <center><h2>Learn Tech Podcast</h2></center>
+        <center><h6>Daily Podcast Series Covering Tech Topics</h6></center>
+        <center><button type="button" name="button">Listen Now</button></center>
+      </div>
+
+      <div class="learntechblog">
+        <img src="img/techtipsblog.jpg" alt="Tech Tips Blog Img">
+        <center><h2>Tech Tips Blog</h2></center>
+        <center><h6>Daily Blog Covering Tech Topics</h6></center>
+        <center><button type="button" name="button">Read Now</button></center>
+      </div>
+
+    </section>
+
+    <footer>
+      <img id="logo" src="img/logo.png" alt="LearnTeach+ Logo">
+      <p id="footer">© Copyright 2022. All Rights Reserved. | LearnTech Plus</p>
+    </footer>
 
   </body>
 </html>
