--- a/HTML5/HTML5/11. Project Files/01. Starter Files/techsupport.html
+++ b/HTML5/HTML5/11. Project Files/01. Starter Files/techsupport.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <!-- Start Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/techsupport.css">
 
     <!-- Start Global CSS -->
     <link rel="stylesheet" type="text/css" href="css/global.css">
@@ -31,8 +31,43 @@
 
     </header>
 
+    <section id="techsupport">
 
+      <center><h1>Tech Support</h1></center>
 
+      <div class="computersupport">
+        <img id="computer" src="img/course-01.jpg" alt="Computer Support 1">
+        <div class="text">
+          <h1>Computer Support</h1>
+          <p>This is some text about computer support</p>
+          <button>Book Appointment</button>
+        </div>
+      </div>
+
+      <div class="computersupport2">
+        <img id="computer2" src="img/course-01.jpg" alt="Computer Support 2">
+        <div class="text2">
+          <h1>Printer Support</h1>
+          <p>This is some text about computer support</p>
+          <button>Book Appointment</button>
+        </div>
+      </div>
+
+      <div class="computersupport3">
+        <img id="computer3" src="img/course-01.jpg" alt="Computer Support 3">
+        <div class="text3">
+          <h1>Smart Device Support</h1>
+          <p>This is some text about computer support</p>
+          <button>Book Appointment</button>
+        </div>
+      </div>
+
+    </section>
+
+    <footer id="techsupport">
+      <img id="logo" src="img/logo.png" alt="LearnTeach+ Logo">
+      <p id="footer">© Copyright 2022. All Rights Reserved. | LearnTech Plus</p>
+    </footer>
 
   </body>
 </html>
