--- a/HTML5/HTML5/11. Project Files/01. Starter Files/contact.html
+++ b/HTML5/HTML5/11. Project Files/01. Starter Files/contact.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
 
-    <title>LearnTech Plus | Contact</title>
+  <title>LearnTech Plus | Contact</title>
 
-    <!-- Start Normalize CSS -->
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <!-- Start Normalize CSS -->
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
-    <!-- Start Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+  <!-- Start Custom CSS -->
+  <link rel="stylesheet" type="text/css" href="css/contact.css">
 
-    <!-- Start Global CSS -->
-    <link rel="stylesheet" type="text/css" href="css/global.css">
+  <!-- Start Global CSS -->
+  <link rel="stylesheet" type="text/css" href="css/global.css">
 
-  </head>
-  <body>
+</head>
+<body>
 
-    <header>
+  <header>
 
-      <img id="logo" src="img/logo.png" alt="LearnTech+ Logo">
+    <img id="logo" src="img/logo.png" alt="LearnTech+ Logo">
 
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="techsupport.html">Tech Support</a>
-        <a href="courses.html">Courses</a>
-        <a href="premiumplus.html">Premium Plus</a>
-        <a href="learntech.html">Learn Tech</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="techsupport.html">Tech Support</a>
+      <a href="courses.html">Courses</a>
+      <a href="premiumplus.html">Premium Plus</a>
+      <a href="learntech.html">Learn Tech</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
-    </header>
+  </header>
 
+    <center><h1 class="h1lt">Contact</h1></center>
 
+    <form>
+      First Name:<br>
+      <input type="text" name="firstname" value="">
+      <br>
 
+      Last Name:<br>
+      <input type="text" name="lastname" value="">
+      <br>
+
+      Email:<br>
+      <input type="text" name="email" value="">
+      <br><br>
+
+      <textarea name="name" rows="10" cols="30"></textarea>
+      <br><br>
+      <input type="submit" value="Submit">
+    </form>
+
+    <footer>
+      <img id="logo" src="img/logo.png" alt="LearnTeach+ Logo">
+      <p id="footer">© Copyright 2022. All Rights Reserved. | LearnTech Plus</p>
+    </footer>
 
   </body>
 </html>
