--- a/HTML5/HTML5/11. Project Files/01. Starter Files/premiumplus.html
+++ b/HTML5/HTML5/11. Project Files/01. Starter Files/premiumplus.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <!-- Start Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/premiumplus.css">
 
     <!-- Start Global CSS -->
     <link rel="stylesheet" type="text/css" href="css/global.css">
@@ -31,8 +31,52 @@
 
     </header>
 
+    <section id="premiumplus">
 
+      <center><h1>Premium Plus</h1></center>
 
+      <div class="monthly">
+        <h2>Monthly Plan</h2>
+        <ul>
+          <li>1 Month of Access</li>
+          <li>Access our Library</li>
+          <li>New Courses Weekly</li>
+          <li>18+ Hours of Video</li>
+          <li>$30.00 Monthly Payment</li>
+        </ul>
+        <button>Sign Up</button>
+      </div>
+
+      <div class="annual">
+        <h2>Annual Plan</h2>
+        <ul>
+          <li>1 Month of Access</li>
+          <li>Access our Library</li>
+          <li>New Courses Weekly</li>
+          <li>18+ Hours of Video</li>
+          <li>$30.00 Monthly Payment</li>
+        </ul>
+        <button>Sign Up</button>
+      </div>
+
+      <div class="lifetime">
+        <h2>Life Time Plan</h2>
+        <ul>
+          <li>1 Month of Access</li>
+          <li>Access our Library</li>
+          <li>New Courses Weekly</li>
+          <li>18+ Hours of Video</li>
+          <li>$30.00 Monthly Payment</li>
+        </ul>
+        <button>Sign Up</button>
+      </div>
+
+    </section>
+
+    <footer>
+      <img id="logo" src="img/logo.png" alt="LearnTeach+ Logo">
+      <p id="footer">© Copyright 2022. All Rights Reserved. | LearnTech Plus</p>
+    </footer>
 
   </body>
 </html>
